<?xml version="1.0"?>
<package format="3">
  <name>imaging_msgs</name>
  <version>0.0.1</version>
  <description>Contains messages which describe the imaging process.</description>

  <maintainer email="amarburg@uw.edu">Aaron Marburg</maintainer>
  <author email="amarburg@uw.edu">Aaron Marburg</author>

  <license>BSD 3-Clause</license>
  <url type="website">https://github.com/apl-ocean-engineering/imaging_msgs</url>

  <buildtool_depend>colcon</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
